<?xml version="1.0" encoding="utf-8"?>
<!-- The menu found in the main multi-day forecast  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.indiewalk.mystic.weatherapp.eu.indiewalk.mystic.weatherapp.ui.list.MainActivity">
    <item
        android:id="@+id/action_refresh"
        android:icon="@color/colorPrimaryDark"
        android:orderInCategory="1"
        android:title="@string/action_refresh"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_map"
        android:icon="@color/colorPrimaryDark"
        android:orderInCategory="100"
        android:title="@string/action_open_map"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_popup_sync"
        android:orderInCategory="200"
        android:title="@string/action_settings"
        app:showAsAction="never" />


</menu>